# ComfyUI-IF_Trellis

./: IF_Preview_3D.py  IF_Trellis.py  IF_TrellisCheckpointLoader.py  README.md  __init__.py  linux_requirements.txt  project.toml  pyproject.toml  requirements.txt  trellis_model_manager.py  win_requirements.txt
.github/workflows/: publishtoregistry.yml
extensions/nvdiffrast/: setup.py
extensions/nvdiffrast/nvdiffrast/torch/: ops.py
trellis/: __init__.py  backend_config.py
trellis/models/: __init__.py  sparse_structure_flow.py  sparse_structure_vae.py  structured_latent_flow.py
trellis/models/structured_latent_vae/: __init__.py  base.py  decoder_gs.py  decoder_mesh.py  decoder_rf.py  encoder.py
trellis/modules/: __init__.py  attention_utils.py  repomix-output.txt  spatial.py  utils.py
trellis/modules/attention/: __init__.py  full_attn.py  modules.py
trellis/modules/sparse/: __init__.py  basic.py
trellis/modules/sparse/attention/: __init__.py  full_attn.py  modules.py  serialized_attn.py  windowed_attn.py
trellis/modules/sparse/conv/: __init__.py  conv_spconv.py  conv_torchsparse.py
trellis/modules/sparse/transformer/: modulated.py
trellis/modules/transformer/: blocks.py  modulated.py
trellis/pipelines/: __init__.py  base.py  trellis_image_to_3d.py
trellis/pipelines/samplers/: base.py  classifier_free_guidance_mixin.py  flow_euler.py  guidance_interval_mixin.py
trellis/renderers/: __init__.py  gaussian_render.py  mesh_renderer.py  octree_renderer.py
trellis/representations/: __init__.py
trellis/representations/gaussian/: gaussian_model.py
trellis/representations/mesh/: cube2mesh.py  flexicube.py
trellis/utils/: _rasterization.py  general_utils.py  postprocessing_utils.py  random_utils.py  render_utils.py
web/: visualization.js
web/html/: gsVisualizer.html  preview3D.html  threeVisualizer.html
web/js/: preview3D.js  preview_3d.js
web/style/: threeStyle.css
wheels/: diffoctreerast-0.0.0-cp310-cp310-linux_x86_64.whl  nvdiffrast-0.3.3-cp310-cp310-linux_x86_64.whl
workflow/: IF_TRELLIS_WF (2).json  IF_TRELLIS_WF.json  IF_TRELLIS_WF_multi.json  IF_TRELLIS_WF_multy.json  IF_TRELLIS_WF_single.json
